Add invoker & initial message provider

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 # Don't store runtimes, we will download them via scripts
 worker/runtimes/*
 getruntimes/aws_env
+
+# Pretty sure we don't need this
+.gobincache
