Run travis tests in parallel

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ install:
   - go build ./...
   - ./getruntimes/download_runtimes.sh
 
-script: sudo env "PATH=$PATH" ginkgo -r --randomizeAllSpecs --randomizeSuites
+script: sudo env "PATH=$PATH" ginkgo -r --randomizeAllSpecs --randomizeSuites -nodes=2
