--- a/worker/images/serverless-java/Dockerfile
+++ b/worker/images/serverless-java/Dockerfile
@@ -2,5 +2,5 @@ FROM openjdk:13-alpine
 
 COPY . /usr/src
 WORKDIR /usr/src
-RUN javac -Xlint:deprecation -cp .:gson.jar ServerlessFunction.java StringClassLoader.java
+RUN javac -Xlint:deprecation -cp .:gson.jar ServerlessFunction.java StringJarLoader.java
 CMD ["java", "-cp", ".:/usr/src/gson.jar", "ServerlessFunction"]
